--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -20,6 +20,7 @@ requirements:
   build:
     - python
     - setuptools
+    - genometools
   run:
     - python
     # dependencies are defined in setup.py
